--- a/prueba_bonus.ipynb
+++ b/prueba_bonus.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7225e49d",
+   "execution_count": 12,
+   "id": "66adbf31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "        self.nombre = nombre \n",
     "        self.inventario = {}   #inventario y ventas totales son atributos\n",
     "        self.ventas_totales = float(0) #aquí tiene que ir un float\n",
-    "        self.clientes = {} #agregado en la parte Bonus\n",
+    "        self.clientes = {}\n",
     "\n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "        if nombre in self.inventario:\n",
@@ -78,21 +78,17 @@
     "        print(f\"El valor total de mi inventario es en € {total_valor}\") \n",
     "\n",
     "    def agregar_clientes(self, nombre, email):\n",
-    "        compras = 0 #Nadie ha comprado todavía\n",
-    "        \n",
     "        if nombre in self.clientes.keys(): # se usa keys porque es un diccionario\n",
     "            print(f\"El cliente {nombre} está en la lista.\")\n",
     "        else:\n",
-    "            self.clientes[nombre] = {\"Email\" : email,\n",
-    "                    \"Compras realizadas\" : compras}\n",
-    "            print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")\n",
-    "                "
+    "            self.clientes[nombre] = [nombre, email]\n",
+    "            print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "839442b9",
+   "execution_count": 13,
+   "id": "aa4bded2",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +98,17 @@
       "El producto fresas se ha agregado con éxito.\n",
       "El producto arándanos se ha agregado con éxito.\n",
       "El producto ya existe, en el inventario aparece la cantidad 50 al precio 3.\n",
-      "El producto patatas se ha agregado con éxito.\n"
+      "El producto patatas se ha agregado con éxito.\n",
+      "Detalles del producto. Nombre: fresas, Precio: 3 €, cantidad 50 en unidades.\n",
+      "Detalles del producto. Nombre: patatas, Precio: 4 €, cantidad 60 en unidades.\n",
+      "El producto que busca no está disponible.\n",
+      "Se han agregado 6 del producto fresas.\n",
+      "Se han agregado 6 del producto patatas.\n",
+      "Este producto manzanas no se encuentra en el inventario actualmente.\n",
+      "El producto patatas ha sido eliminado con éxito.\n",
+      "Para el producto fresas el valor total es 150\n",
+      "Para el producto arándanos el valor total es 200\n",
+      "El valor total de mi inventario es en € 350\n"
      ]
     }
    ],
@@ -111,130 +117,23 @@
     "tienda1.agregar_producto('fresas', 3, 50)\n",
     "tienda1.agregar_producto('arándanos', 5, 40)\n",
     "tienda1.agregar_producto('fresas', 3, 50)\n",
-    "tienda1.agregar_producto('patatas', 4, 60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "9545b3ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fresas': {'Nombre': 'fresas', 'Precio €': 3, 'Cantidad': 50},\n",
-       " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40},\n",
-       " 'patatas': {'Nombre': 'patatas', 'Precio €': 4, 'Cantidad': 60}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tienda1.ver_inventario() #el nombre queda redundante, pero si lo quito de la def me falla, así que lo dejo, en el ejercicio de repasso se hacía con id_number pero aquí lo he hecho con el nombre directamente"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "3f15109d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detalles del producto. Nombre: fresas, Precio: 3 €, cantidad 50 en unidades.\n",
-      "Detalles del producto. Nombre: patatas, Precio: 4 €, cantidad 60 en unidades.\n",
-      "El producto que busca no está disponible.\n"
-     ]
-    }
-   ],
-   "source": [
+    "tienda1.agregar_producto('patatas', 4, 60)\n",
+    "tienda1.ver_inventario() #el nombre queda redundante, pero si lo quito de la def me falla, así que lo dejo, en el ejercicio de repasso se hacía con id_number pero aquí lo he hecho con el nombre directamente\n",
     "tienda1.buscar_producto('fresas')\n",
     "tienda1.buscar_producto('patatas')\n",
-    "tienda1.buscar_producto('manzanas')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "20240120",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Se han agregado 6 del producto fresas.\n",
-      "Se han agregado 6 del producto patatas.\n",
-      "Este producto manzanas no se encuentra en el inventario actualmente.\n"
-     ]
-    }
-   ],
-   "source": [
+    "tienda1.buscar_producto('manzanas')\n",
     "tienda1.actualizar_stock('fresas', 6)\n",
     "tienda1.actualizar_stock('patatas', 6)\n",
-    "tienda1.actualizar_stock('manzanas', 6) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "58c4f84b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "El producto patatas ha sido eliminado con éxito.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'fresas': {'Nombre': 'fresas', 'Precio €': 3, 'Cantidad': 50},\n",
-       " 'arándanos': {'Nombre': 'arándanos', 'Precio €': 5, 'Cantidad': 40}}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "tienda1.actualizar_stock('manzanas', 6) \n",
     "tienda1.eliminar_producto('patatas')\n",
-    "tienda1.ver_inventario() #se actualiza correctamente sin patatas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3211f6d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Para el producto fresas el valor total es 150\n",
-      "Para el producto arándanos el valor total es 200\n",
-      "El valor total de mi inventario es en € 350\n"
-     ]
-    }
-   ],
-   "source": [
+    "tienda1.ver_inventario() #se actualiza correctamente sin patatas\n",
     "tienda1.calcular_valor_inventario()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c3a48183",
+   "execution_count": 14,
+   "id": "6af2074c",
    "metadata": {},
    "outputs": [
     {
@@ -253,25 +152,45 @@
     "cliente3 = ('Melania', 'mel@gmail.com')\n",
     "tienda1.agregar_clientes('Marc', 'Marc@gmail.com')\n",
     "tienda1.agregar_clientes('Mercedes', 'merce@gmail.com')\n",
-    "tienda1.agregar_clientes('Melania', 'mel@gmail.com')"
+    "tienda1.agregar_clientes('Melania', 'mel@gmail.com')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "59410b11",
+   "execution_count": 15,
+   "id": "3a7ebd9f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Marc': {'Email': 'Marc@gmail.com', 'Compras realizadas': 0}, 'Mercedes': {'Email': 'merce@gmail.com', 'Compras realizadas': 0}, 'Melania': {'Email': 'mel@gmail.com', 'Compras realizadas': 0}}\n"
+     "ename": "AttributeError",
+     "evalue": "'TiendaOnline' object has no attribute 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tienda1\u001b[38;5;241m.\u001b[39mself\u001b[38;5;241m.\u001b[39mclientes()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TiendaOnline' object has no attribute 'self'"
      ]
     }
    ],
    "source": [
-    "print(tienda1.clientes)"
+    "tienda1.self.clientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c5c629d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agregar_clientes(self, nombre, email):\n",
+    "    if nombre in self.clientes.keys(): # se usa keys porque es un diccionario\n",
+    "        print(f\"El cliente {nombre} está en la lista.\")\n",
+    "    else:\n",
+    "        self.clientes[nombre] = [nombre, email]\n",
+    "        print(f\"El cliente {nombre} ha sido agregado con el email: {email}.\")\n"
    ]
   }
  ],
